# liquid_crystal

./: Cargo.toml  LICENSE.md  readme.md
exemples/esp32/: hello_i2c.rs
exemples/stm32f1xx/: hello.rs  hello_i2c.rs
src/: lcd_bus.rs  lib.rs  prelude.rs
src/fast_config/: mod.rs
src/interfaces/: mod.rs
src/lcd_trait/: commands.rs  interfaces.rs  layout.rs  mod.rs
src/lcd_trait/interfaces/: dummy.rs  mod.rs
