[package]
name = "liquid_crystal"
authors = ["guilherme Silva Schultz <guilhermeSschultz.contato@gmail.com>"]
version = "0.1.5"
edition = "2021"
description = "a customizable library to work with alphanumeric lcd display compatible with the HD44780 controller"
license = "MIT"
repository = "https://github.com/RecursiveError/liquid_crystal"
keywords = ["lcd", "liquidcrystal", "HD44780", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]


[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }

[features]
async = ["dep:embedded-hal-async"]
